--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,11 @@
   font-family: font-muli;
   src: url('../src/assets/font/Mulish-ExtraLight.ttf');
 }
+
 body {
   font-family: font-muli;
   font-size: 18px;
 }
+
+$font-size-base: 17px;
+$primary-color: #cbba9c;
