--- a/src/app/main/detail/evaluates/evaluates.component.html
+++ b/src/app/main/detail/evaluates/evaluates.component.html
@@ -7,6 +7,27 @@
     <ng-container *ngIf="!evaluates.length">
       <h3>Hãy là người đầu tiên nhận xét “{{ product.name }}”</h3>
     </ng-container>
+    <h4>Đánh giá của bạn</h4>
+    <nz-rate [(ngModel)]="rate" [nzAllowClear]="true"></nz-rate>
+    <form [formGroup]="form" (ngSubmit)="doSubmit()">
+      <div nz-row class="content-label">
+        <label for="content">Nhận xét của bạn *</label>
+      </div>
+      <div nz-row class="content-input">
+        <textarea id="content" rows="4" cols="200"></textarea>
+      </div>
+      <div class="information">
+        <div class="left">
+          <label for="name">Tên *</label>
+          <input id="name"/>
+        </div>
+        <div class="right">
+          <label for="email">Email *</label>
+          <input id="email"/>
+        </div>
+      </div>
+      <button type="submit" class="button-submit">Submit</button>
+    </form>
   </div>
 </div>
 <ng-template #notEvaluate>
