--- a/src/app/main/home/product-carousel/product-carousel.component.html
+++ b/src/app/main/home/product-carousel/product-carousel.component.html
@@ -9,8 +9,8 @@
             <div class="image">
               <img [src]="product.image" [alt]="product.name">
             </div>
-            <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="(product.percentSale || 0) > 10">
-              <span>-{{ product.percentSale }}%</span>
+            <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="(product.discountPercentage || 0) > 10">
+              <span>-{{ product.discountPercentage }}%</span>
             </div>
             <div class="button-prev">
               <button (click)="goPrevSlide()"><span nz-icon nzType="left" nzTheme="outline"></span></button>
