--- a/src/app/main/detail/products-related/products-related.component.html
+++ b/src/app/main/detail/products-related/products-related.component.html
@@ -1,7 +1,4 @@
-<div class="product-container">
-  <h2>360° COLLECTION</h2>
-  <h1>FEATURED <span>PRODUCTS</span></h1>
-  <div class="gap-element"></div>
+<div class="products-related-container">
   <div class="list-product-feature">
     <div class="card-container" *ngFor="let product of products">
       <div class="image">
