--- a/src/app/main/detail/products-related/products-related.component.scss
+++ b/src/app/main/detail/products-related/products-related.component.scss
@@ -1,26 +1,4 @@
-.product-container {
-  text-align: center;
-
-  h2 {
-    font-weight: bold;
-    font-size: 20px;
-  }
-
-  h1 {
-    font-weight: bold;
-    font-family: 'arial black', sans-serif;;
-    color: #cbba9c;
-    font-size: 50px;
-
-    span {
-      color: black;
-    }
-  }
-
-  .gap-element {
-    padding-top: 30px;
-  }
-
+::ng-deep .products-related-container {
   .list-product-feature {
     width: calc(120rem - 733px);
     margin: auto;
@@ -30,14 +8,16 @@
 
     .card-container {
       background-color: #fff;
-      width: 31.33%;
+      width: 19%;
       margin-bottom: 62px;
       transition: transform 0.6s, box-shadow 0.6s;
       position: relative;
       cursor: pointer;
+      border: 2px solid #ddd;
 
       .image {
-        min-height: 370px;
+        min-height: 250px;
+
         img {
           width: 100%;
           height: 100%;
@@ -49,6 +29,9 @@
 
         h5 {
           font-weight: bold;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         .price-warraper {
@@ -81,8 +64,8 @@
         outline: none;
         border: none;
         position: absolute;
-        top: 72%;
-        left: 20px;
+        top: 62%;
+        left: 15px;
         opacity: 0;
         transition: opacity 0.6s;
       }
@@ -119,6 +102,7 @@
           background-color: #cbba9c;
           color: #fff;
         }
+
         strong::after {
           height: 9px;
         }
@@ -126,8 +110,8 @@
     }
 
     .card-container:hover {
-      box-shadow: 0px 30px 40px 0px rgb(0 0 0 / 20%);
-      transform: translateY(-6px);
+      // box-shadow: 0px 30px 40px 0px rgb(0 0 0 / 20%);
+      // transform: translateY(-6px);
 
       button {
         opacity: 1;
@@ -138,11 +122,5 @@
       font-weight: 500 !important;
       text-decoration: line-through;
     }
-  }
-
-  .text-ellipsis {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
 }
