--- a/src/app/main/cart/cart.component.html
+++ b/src/app/main/cart/cart.component.html
@@ -1,3 +1,39 @@
-<p>
-  cart works!
-</p>
+<div class="cart-container">
+  <div class="list-product">
+    <div class="row">
+      <div class="product-name">
+        {{ 'cart.product' | translate }}
+      </div>
+      <div class="product-price">
+        {{ 'cart.price' | translate }}
+      </div>
+      <div class="product-quantity">
+        {{ 'cart.quantity' | translate }}
+      </div>
+      <div class="product-total">
+        {{ 'cart.total' | translate }}
+      </div>
+      <div class="product-action">
+        {{ 'cart.action' | translate }}
+      </div>
+    </div>
+    <div class="row">
+      <div class="product-name">
+
+      </div>
+      <div class="product-price">
+        {{ 'cart.price' | translate }}
+      </div>
+      <div class="product-quantity">
+        {{ 'cart.quantity' | translate }}
+      </div>
+      <div class="product-total">
+        {{ 'cart.total' | translate }}
+      </div>
+      <div class="product-action">
+        {{ 'cart.total' | translate }}
+      </div>
+    </div>
+  </div>
+</div>
+
