--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -4,7 +4,7 @@
   }
 
   .content {
-    // min-height: calc(100vh - 55px);
+    min-height: calc(100vh - 454px);
     // width: 60%;
     // margin: auto;
 
