--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
+<app-loading></app-loading>
 <router-outlet></router-outlet>
-<ngx-spinner type="ball-clip-rotate" color="#fff" bdColor = "rgba(0, 0, 0, 0.3)" [fullScreen] = "true">
-  <p style="color: white" > Loading... </p>
-</ngx-spinner>
+
